--- a/springboot-sessionmanage-jdbc/src/main/resources/templates/index.html
+++ b/springboot-sessionmanage-jdbc/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 	<div>
 		<h2>Messages</h2>
 		<ul th:each="message : ${sessionMessages}">
-			<li th:text="">msg</li>
+			<li th:text="${message}">msg</li>
 		</ul>
 	</div>
 	<div>
